--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@sanity/client": "^3.3.3",
     "classnames": "^2.3.1",
     "next": "^12.0.9",
     "next-seo": "^4.29.0",
