--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@sanity/client": "^3.3.3",
     "classnames": "^2.3.1",
+    "firebase": "^9.9.4",
     "next": "^12.0.9",
     "next-seo": "^4.29.0",
     "react": "^17.0.2",
