--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
-    "@sanity/client": "^3.3.3",
+    "@portabletext/react": "^3.0.4",
+    "@sanity/client": "^6.4.0",
+    "@sanity/image-url": "^1.0.2",
     "classnames": "^2.3.1",
     "firebase": "^9.9.4",
-    "next": "^12.0.9",
+    "next": "^12.3.4",
+    "next-sanity": "^5.1.3",
     "next-seo": "^4.29.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
+    "sharp": "^0.32.4",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.0.9",
+    "@next/bundle-analyzer": "^12.3.4",
     "@types/node": "^17.0.13",
-    "@types/react": "^17.0.38",
+    "@types/react": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.2",
