--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
-    "@portabletext/react": "^3.0.4",
+    "@portabletext/react": "^3.0.7",
     "@sanity/client": "^6.4.0",
     "@sanity/image-url": "^1.0.2",
     "classnames": "^2.3.1",
@@ -27,7 +27,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
     "sharp": "^0.32.4",
-    "styled-jsx-plugin-postcss": "^4.0.1"
+    "styled-jsx-plugin-postcss": "^4.0.1",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.3.4",
