--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
+    "react-icons": "^4.10.1",
     "sharp": "^0.32.4",
     "styled-jsx-plugin-postcss": "^4.0.1",
     "zustand": "^4.4.1"
