--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "tailwindcss": "^3.0.17",
+    "tailwindcss": "latest",
     "typescript": "^4.5.5"
   },
   "license": "ISC"
